# rurl-shortener

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
.github/workflows/: backend.yaml  ci-gatekeeper.yaml
app/: app.js  index.html
app/test/: index.html
backend/: Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.common  openapi.yaml
backend/src/: app.rs  config.rs  handlers.rs  lib.rs  main.rs  metrics.rs  validation.rs
backend/src/link_generator/: mod.rs  openrouter.rs  random.rs
backend/src/storage/: mod.rs  redis.rs
backend/tests/: integration_test.rs
deployment/configs/: alertmanager.yaml  datasource.yaml  grafana_dashboard_provider.yaml  loki.yaml  scrape_config.yaml  vmalert.yaml
deployment/configs/grafana_dashboards/: grafana_test_dashboard.json
frontend/: index.html  utils.js
frontend/tests/: index.html
nginx/: nginx.conf  nginx.conf.template  start.sh
redis/: redis.conf
telemetry/alerting/: alertmanager.yaml  vmalert.yaml
telemetry/logging/: alloy.yaml
telemetry/victoriametrics/: scrape_config.yaml
victoria-test/: Dockerfile  go.mod  main.go
