[package]
name = "rurl-shortener"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-macros = "0.5.0"
env_logger = "0.11.8"
log = "0.4.27"
maplit = "1.0.2"
rand = "0.9.1"
redis = { version = "0.30.0", features = ["tokio-comp", "aio", "connection-manager"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false}
serde = { version = "1.0.219", features = ["derive", "std"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
